--- a/index.css
+++ b/index.css
@@ -1,1 +1,27 @@
-body{margin:0;overflow:hidden}
+
+
+body, html {
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+  }
+  .container-fluid {
+      margin: 0;
+      padding: 0;
+  }
+  .left,
+  .right {
+    height: 100vh;
+    overflow: hidden;
+    overflow-y: scroll; 
+    text-align: center;
+  }
+
+#yesover {
+    color:antiquewhite;
+
+}
+
+html, div {
+    background-color: rgb(41, 40, 40);
+}
