--- a/index.css
+++ b/index.css
@@ -18,10 +18,21 @@ body, html {
   }
 
 #yesover {
-    color:antiquewhite;
+    color:rgb(233, 233, 233);
+    font-family: sans-serif;
+    font-size: x-large;
+    line-height: 200%;
 
 }
 
 html, div {
     background-color: rgb(41, 40, 40);
+}
+
+h1 {
+    color:rgb(233, 233, 233);
+    font-family: sans-serif;
+    font-size: x-large;
+    line-height: 200%;
+    
 }
