--- a/index.css
+++ b/index.css
@@ -1,5 +1,3 @@
-
-
 body, html {
     margin: 0;
     padding: 0;
@@ -13,15 +11,21 @@ body, html {
   .right {
     height: 100vh;
     overflow: hidden;
-    overflow-y: scroll; 
     text-align: center;
   }
 
 #yesover {
     color:antiquewhite;
-
+    overflow-y: scroll; 
 }
 
 html, div {
     background-color: rgb(41, 40, 40);
+}
+
+canvas {
+    width: 100%;
+    height: 100%;
+    display: block;
+    overflow: hidden;
 }
