--- a/index.css
+++ b/index.css
@@ -15,7 +15,7 @@ body, html {
   }
 
 #yesover {
-    overflow-y: scroll; 
+    overflow-y: auto; 
     color:rgb(233, 233, 233);
     font-family: sans-serif;
     font-size: x-large;
@@ -23,7 +23,7 @@ body, html {
 }
 
 html, div {
-    background-color: rgb(41, 40, 40);
+    background-color: rgb(21, 20, 20);
 }
 
 canvas {
