--- a/game.css
+++ b/game.css
@@ -40,5 +40,39 @@ h1 {
 }
 
 #uiBox {
+    padding:50px;
+    background-color: transparent;
+    position:absolute;
+    top:0;
+    left:0;
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+}
+
+#overlay-thingy {
+    position:absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    top:0;
+    left:0;
+    z-index:1000;
+    background-color:black;
     width:100%;
+    height:100%
+}
+
+.loader {
+    border: 16px solid #686868; /* Light grey */
+    border-top: 16px solid #3498db; /* Blue */
+    border-radius: 50%;
+    width: 120px;
+    height: 120px;
+    animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
 }
