--- a/game.css
+++ b/game.css
@@ -81,12 +81,12 @@ h1 {
     width:100%;
     height:100%;
     /* The image used */
-    background-image: url("background.png");
+    background-image: url("test.jpg");
 
     /* Add the blur effect */
-    filter: blur(15px);
-    -webkit-filter: blur(15px);
-    opacity: 70%;
+    filter: blur(10px);
+    -webkit-filter: blur(10px);
+    opacity: 100%;
 
     /* Full height */
     height: 100%;
@@ -98,7 +98,7 @@ h1 {
 }
 
 #canvasElm {
-    background-color: transparent;
+    background-color: black;
     z-index: 100;
 }
 
